--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "type-check:watch": "npx tsc",
-    "dev:tsx": "tsc --noEmit & npx tsx watch src/index.ts",
-    "dev:swc": "nodemon",
+    "dev": "nodemon",
     "lint": "npx eslint",
     "lint:fix": "npx eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,8 +28,6 @@
     "globals": "^16.1.0",
     "nodemon": "^3.1.10",
     "prettier": "3.5.3",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
   }
